fix(admin): search z-index

--- a/_sass/_admin.scss
+++ b/_sass/_admin.scss
@@ -247,7 +247,7 @@ input:read-only {
  }
 
 .webix_preloaded_header--top {
-  z-index: 1;
+  z-index: 10;
   right: 17px;
 }
 
@@ -855,5 +855,5 @@ input {
   position: absolute;
   left: 200px;
   width: 400px;
-  z-index: 2;
+  z-index: 20;
 }
